--- a/client/src/assets/scss/index.scss
+++ b/client/src/assets/scss/index.scss
@@ -1,6 +1,5 @@
  @import 'bootstrap/scss/bootstrap.scss';
 
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -25,13 +24,21 @@ body {
 .avatar {
   align-items: center!important;
   display: flex!important;
-  font-weight: bolder;
+  //font-weight: 700;
   white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 
   .avatar__icon {
-    width: 30px;
-    height: 30px;
+    width: 48px;
+    height: 48px;
     margin-right: .5rem;
+  }
+  .avatar__header {
+    white-space: nowrap;
+    display: inline-block;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
   }
 }
 
