bugfix: avatar on suggestions and posts

--- a/client/src/components/Avatar/Avatar.scss
+++ b/client/src/components/Avatar/Avatar.scss
@@ -8,6 +8,11 @@ $avatar-large-size: 56px;
     color: black;
     text-decoration: none;
   }
+
+  a, a:hover {
+    color: black;
+    cursor: pointer;
+  }
   
   .avatar {
     object-fit: cover;
