--- a/client/src/components/Post/Tools.scss
+++ b/client/src/components/Post/Tools.scss
@@ -1,9 +1,9 @@
 .nav-tools {
   .nav-link {
     color: #343a40 !important;
-    padding: 0.3rem;
+  //  padding: 0.3rem;
   }
   .nav-link:first-child {
-    padding-left: 1rem;
+    margin-left: 1rem;
   }
 }
