--- a/client/src/domain/GridGallery/GridGallery.scss
+++ b/client/src/domain/GridGallery/GridGallery.scss
@@ -22,99 +22,124 @@ $payable-content-p-font-size-mobile-l: 2.5rem;
 
 .tile {
   margin-bottom: $tile-margin-bottom;
+  padding-bottom: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin: 2px;
+  background-color: #efefef;
+  border: 0 solid #000;
 
-  & .react-swipeable-view-container {
-    height: calc(#{$block-breakpoint-height-def} - #{$media-container-margin});
-    & > div {
-      overflow: hidden !important;
+  > div {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    .tile-icon {
+      position: absolute;
+      z-index: 100;
+      right: 5px;
+      top: 5px;
+      opacity: 0.8;
+      color: #ffffff;
     }
   }
 
-  & .react-player {
-    height: calc(#{$block-breakpoint-height-def} - #{$media-container-margin}) !important;
-  }
 
-  & .payable-content {
-    height: calc(#{$block-breakpoint-height-def} - #{$media-container-margin});
-  }
+  // & .react-swipeable-view-container {
+  //   height: calc(#{$block-breakpoint-height-def} - #{$media-container-margin});
+  //   & > div {
+  //     overflow: hidden !important;
+  //   }
+  // }
+
+  // & .react-player {
+  //   height: calc(#{$block-breakpoint-height-def} - #{$media-container-margin}) !important;
+  // }
+
+  // & .payable-content {
+  //   height: calc(#{$block-breakpoint-height-def} - #{$media-container-margin});
+  // }
 }
 
-@media screen and (max-width: 1199px) {
-  .tile {
-    & .react-swipeable-view-container {
-      height: calc(#{$block-breakpoint-height-laptop} - #{$media-container-margin});
-    }
+// @media screen and (max-width: 1199px) {
+//   .tile {
+//     & .react-swipeable-view-container {
+//       height: calc(#{$block-breakpoint-height-laptop} - #{$media-container-margin});
+//     }
 
-    & .react-player {
-      height: calc(#{$block-breakpoint-height-laptop} - #{$media-container-margin}) !important;
-    }
+//     & .react-player {
+//       height: calc(#{$block-breakpoint-height-laptop} - #{$media-container-margin}) !important;
+//     }
 
-    & .payable-content {
-      height: calc(#{$block-breakpoint-height-laptop} - #{$media-container-margin});
-    }
-  }
-}
+//     & .payable-content {
+//       height: calc(#{$block-breakpoint-height-laptop} - #{$media-container-margin});
+//     }
+//   }
+// }
 
-@media screen and (max-width: 991px) {
-  .tile {
-    & .react-swipeable-view-container {
-      height: calc(#{$block-breakpoint-height-tablet} - #{$media-container-margin});
-    }
+// @media screen and (max-width: 991px) {
+//   .tile {
+//     & .react-swipeable-view-container {
+//       height: calc(#{$block-breakpoint-height-tablet} - #{$media-container-margin});
+//     }
 
-    & .react-player {
-      height: calc(#{$block-breakpoint-height-tablet} - #{$media-container-margin}) !important;
-    }
+//     & .react-player {
+//       height: calc(#{$block-breakpoint-height-tablet} - #{$media-container-margin}) !important;
+//     }
 
-    & .payable-content {
-      height: calc(#{$block-breakpoint-height-tablet} - #{$media-container-margin});
+//     & .payable-content {
+//       height: calc(#{$block-breakpoint-height-tablet} - #{$media-container-margin});
 
-      & svg {
-        font-size: $payable-content-svg-font-size-tablet;
-      }
+//       & svg {
+//         font-size: $payable-content-svg-font-size-tablet;
+//       }
 
-      & p {
-        font-size: $payable-content-p-font-size-tablet;
-      }
-    }
-  }
-}
+//       & p {
+//         font-size: $payable-content-p-font-size-tablet;
+//       }
+//     }
+//   }
+// }
 
-@media screen and (max-width: 425px) {
-  .tile {
-    & .react-swipeable-view-container {
-      height: calc(#{$block-breakpoint-height-mobile-l} - #{$media-container-margin});
-    }
+// @media screen and (max-width: 425px) {
+//   .tile {
+//     & .react-swipeable-view-container {
+//       height: calc(#{$block-breakpoint-height-mobile-l} - #{$media-container-margin});
+//     }
 
-    & .react-player {
-      height: calc(#{$block-breakpoint-height-mobile-l} - #{$media-container-margin}) !important;
-    }
+//     & .react-player {
+//       height: calc(#{$block-breakpoint-height-mobile-l} - #{$media-container-margin}) !important;
+//     }
 
-    & .payable-content {
-      height: calc(#{$block-breakpoint-height-mobile-l} - #{$media-container-margin});
+//     & .payable-content {
+//       height: calc(#{$block-breakpoint-height-mobile-l} - #{$media-container-margin});
 
-      & svg {
-        font-size: $payable-content-svg-font-size-mobile-l;
-      }
+//       & svg {
+//         font-size: $payable-content-svg-font-size-mobile-l;
+//       }
 
-      & p {
-        font-size: $payable-content-p-font-size-mobile-l;
-      }
-    }
-  }
-}
+//       & p {
+//         font-size: $payable-content-p-font-size-mobile-l;
+//       }
+//     }
+//   }
+// }
 
-@media screen and (max-width: 320px) {
-  .tile {
-    & .react-swipeable-view-container {
-      height: calc(#{$block-breakpoint-height-mobile} - #{$media-container-margin});
-    }
+// @media screen and (max-width: 320px) {
+//   .tile {
+//     & .react-swipeable-view-container {
+//       height: calc(#{$block-breakpoint-height-mobile} - #{$media-container-margin});
+//     }
 
-    & .react-player {
-      height: calc(#{$block-breakpoint-height-mobile} - #{$media-container-margin}) !important;
-    }
+//     & .react-player {
+//       height: calc(#{$block-breakpoint-height-mobile} - #{$media-container-margin}) !important;
+//     }
 
-    & .payable-content {
-      height: calc(#{$block-breakpoint-height-mobile} - #{$media-container-margin});
-    }
-  }
-}
+//     & .payable-content {
+//       height: calc(#{$block-breakpoint-height-mobile} - #{$media-container-margin});
+//     }
+//   }
+// }
