Fix GridGallery component, change style

--- a/client/src/assets/scss/index.scss
+++ b/client/src/assets/scss/index.scss
@@ -10,8 +10,9 @@
 // $body-bg: #000;
 
 @import 'sandstone/_variables';
-
 @import '~bootstrap/scss/bootstrap.scss';
+$enable-gradient: "true";
+
 @import 'sandstone/_bootswatch';
 
 body {
