--- a/client/src/components/Thumbnail/Thumbnail.scss
+++ b/client/src/components/Thumbnail/Thumbnail.scss
@@ -1,8 +1,8 @@
 .thumbnail {
-  width: 120px;
   height: 120px;
   background-size: cover;
   display: inline-block;
-  margin: 1px;
+  margin: 0;
+  border: 1px solid white;
   box-shadow: inset 0 0 10px rgba(0,0,0,0.25);
 }
